// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expand button on click when short text is provided renders button after text 1`] = `
<span>
  <button
    aria-label="Click to expand text"
    class="!gl-bg-transparent !gl-outline-none !gl-shadow-none btn btn-default btn-icon btn-md button-ellipsis-horizontal gl-border-none gl-button gl-p-0 gl-rounded-none js-text-expander-prepend text-expander"
    style="display: none;"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="gl-button-icon gl-fill-current gl-icon s16"
      data-testid="ellipsis_h-icon"
      role="img"
    >
      <use
        href="file-mock#ellipsis_h"
      />
    </svg>
  </button>
  <span>
    <p>
      Expanded!
    </p>
  </span>
  <button
    aria-label="Click to expand text"
    class="!gl-bg-transparent !gl-outline-none !gl-shadow-none btn btn-default btn-icon btn-md button-ellipsis-horizontal gl-border-none gl-button gl-p-0 gl-rounded-none js-text-expander-append text-expander"
    style=""
    type="button"
  >
    <svg
      aria-hidden="true"
      class="gl-button-icon gl-fill-current gl-icon s16"
      data-testid="ellipsis_h-icon"
      role="img"
    >
      <use
        href="file-mock#ellipsis_h"
      />
    </svg>
  </button>
</span>
`;

exports[`Expand button when short text is provided renders button before text 1`] = `
<span>
  <button
    aria-label="Click to expand text"
    class="!gl-bg-transparent !gl-outline-none !gl-shadow-none btn btn-default btn-icon btn-md button-ellipsis-horizontal gl-border-none gl-button gl-p-0 gl-rounded-none js-text-expander-prepend text-expander"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="gl-button-icon gl-fill-current gl-icon s16"
      data-testid="ellipsis_h-icon"
      role="img"
    >
      <use
        href="file-mock#ellipsis_h"
      />
    </svg>
  </button>
  <span>
    <p>
      Short
    </p>
  </span>
  <button
    aria-label="Click to expand text"
    class="!gl-bg-transparent !gl-outline-none !gl-shadow-none btn btn-default btn-icon btn-md button-ellipsis-horizontal gl-border-none gl-button gl-p-0 gl-rounded-none js-text-expander-append text-expander"
    style="display: none;"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="gl-button-icon gl-fill-current gl-icon s16"
      data-testid="ellipsis_h-icon"
      role="img"
    >
      <use
        href="file-mock#ellipsis_h"
      />
    </svg>
  </button>
</span>
`;
